# ibus-array

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  aclocal.m4  config.h.in  configure  configure.ac  ibus-array.spec.in  meson.build  meson.options
autom4te.cache/: output.0  traces.1
data/: Makefile.am  array.db  array30-OpenVanilla-big-v2023-1.0-20230211.cin  array30.cin  array30_simplecode.cin  cin2sqlite.py  emptyDB.py  meson.build  update.py  updatePhrase.py  updateShortcode.py  updateSimple.py
icons/: Makefile.am  Makefile.in  meson.build
m4/: Makefile.am  Makefile.in
po/: POTFILES.in  meson.build  zh_TW.po
setup/: .gitignore  Makefile.am  config.py.in  ibus-setup-array.in  main.py  meson.build
src/: .gitignore  Makefile.am  array.c  array.h  array.inputMethod.xml.in  array.xml.in.in  engine.c  engine.h  main.c  meson.build  test.c
tags/release-0.0.1/: Makefile.in  aclocal.m4
tags/release-0.0.1/data/: Makefile.in
tags/release-0.0.1/src/: Makefile.am  Makefile.in  array.c  array.h  array.xml.in.in
tags/release-0.0.1/tools/: array-shortcode.cin  insert_symbol.py
tags/release-0.0.2/: AUTHORS  Makefile.am
tags/release-0.0.2/m4/: Makefile.in
tags/release-0.0.2/setup/: Makefile.in
tags/release-0.0.2/src/: Makefile.am  array.c  engine.c
tags/release-0.0.2/tools/: array.db
tags/release-0.0.3/: ibus-array.spec.in
tags/release-0.0.3/data/: Makefile.am
tags/release-0.0.3/src/: engine.c  engine.h  main.c
tags/release-0.0.3/tools/: insert_extb.py
tags/release-0.0.4/: ChangeLog
tags/release-0.0.4/m4/: Makefile.am
tags/release-0.0.4/setup/: main.py
tags/release-0.0.4/src/: Makefile.am  engine.c
tags/release-0.0.4/tools/: array30.txt  array_special.txt  insert_short.py
tags/release-0.1.0/data/: Makefile.am  array30_27489.utf8  array30_ExtCD_V2012A.utf8
tags/release-0.1.0/icons/: Makefile.am
tags/release-0.1.0/po/: Makevars  zh_TW.po
tags/release-0.1.0/setup/: Makefile.am  ibus-setup-array.in
tags/release-0.1.0/src/: array.h
tags/release-0.1.0/tools/: array_symbol.txt
tarballs/: ibus-array-0.1.0.tgz
tools/: insert_special.py
trunk/: ChangeLog  Makefile.in  README  configure  configure.ac
trunk/autom4te.cache/: requests  traces.0
trunk/data/: Makefile.in  array.db  array30_ExtB.utf8  update.py
trunk/icons/: Makefile.in
trunk/setup/: Makefile.am  Makefile.in  main.py
trunk/src/: Makefile.am  Makefile.in  array.c  array.h  create_test.sh  engine.c  engine.h  main.c
trunk/tools/: array30.cin  insert_main.py
wiki/: Installation.wiki
